RESOLVED FIXED 247520
CRASH at WebKit::VideoFullscreenManager::ensureModelAndInterface
https://bugs.webkit.org/show_bug.cgi?id=247520
Summary CRASH at WebKit::VideoFullscreenManager::ensureModelAndInterface
Jer Noble
Reported 2022-11-04 21:58:59 PDT
CRASH at WebKit::VideoFullscreenManager::ensureModelAndInterface
Attachments
Jer Noble
Comment 1 2022-11-04 21:59:04 PDT
Jer Noble
Comment 2 2022-11-04 22:03:51 PDT
EWS
Comment 3 2022-11-07 08:56:08 PST
Committed 256409@main (1513963400a6): <https://commits.webkit.org/256409@main> Reviewed commits have been landed. Closing PR #6166 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.