Cherry-pick 1513963400a6. rdar://problem/103539242

CRASH at WebKit::VideoFullscreenManager::ensureModelAndInterface
    https://bugs.webkit.org/show_bug.cgi?id=247520
    rdar://67069959

    Reviewed by Eric Carlson.

    In VideoFullscreenManager::exitVideoFullscreenToModeWithoutAnimation(), the HTMLVideoElement
    parameter is search for in a HashMap storing those media element's matching contextIDs. If,
    however, the media element was never in that HashMap, or if it was already removed from that
    hash map, (or more unlikely, if an invalid contextID was inserted into that HashMap), attempting
    to use that invalid contextID as the key to other HashMaps will cause failures, as the map will
    treat that contextID as the "deleted value" key.

    In this exceptional scenario, just bail out.

    * Source/WebKit/WebProcess/cocoa/VideoFullscreenManager.mm:
    (WebKit::VideoFullscreenManager::exitVideoFullscreenToModeWithoutAnimation):

    Canonical link: https://commits.webkit.org/256409@main

Canonical link: https://commits.webkit.org/252432.982@safari-7614-branch